...
              fontSize: 20.sp,
            ),
          ),
        ),
        leading: ZoomIn(
          child: IconButton(
            key: const Key('backButton'),
            icon: const Icon(Icons.arrow_back, color: Colors.white),
            onPressed: () => Navigator.pop(context),
          ),
        ),
      ),
      body: isLoading
...
                                      ),
                                      padding: EdgeInsets.symmetric(
                                        vertical: isTablet ? 18.h : 14.h,
                                        horizontal: isTablet ? 60.w : 40.w,
                                      ),
                                      child: Text(
                                        '🛒 Thêm vào giỏ hàng',
                                        style: GoogleFonts.poppins(
                                          color: Colors.white,
                                          fontSize: isTablet ? 20.sp : 18.sp,
                                        ),
                                      ),
                                    ),
...
