...
            ),
          ),
        ),
        actions: [
          ZoomIn(
            child: IconButton(
              key: const Key('cartIconButton'),
              icon: const Icon(Icons.shopping_cart, color: Colors.white),
              onPressed: () => Navigator.pushNamed(context, '/cart'),
            ),
          ),
          ZoomIn(
            child: IconButton(
...
                                                                  onPressed: () => Navigator.pushNamed(
                                                                    context,
                                                                    '/product_detail',
                                                                    arguments: product,
                                                                  ),
                                                                  child: Text(
                                                                    "Chi tiết",
                                                                    style: GoogleFonts.poppins(
                                                                      color: Colors.blue,
                                                                      fontSize: 12.sp,
                                                                    ),
                                                                  ),
                                                                ),
...
