...
                    key: const Key('welcomeText'),
                  ),
                ),
                SizedBox(height: 20.h),
                FadeInUp(
                  child: TextField(
                    key: const Key('emailField'),
                    controller: emailController,
                    decoration: InputDecoration(
                      prefixIcon: Icon(Icons.email, size: 20.sp, color: Colors.orange),
                      labelText: "Email",
                      labelStyle: GoogleFonts.poppins(fontSize: 14.sp),
                      border: OutlineInputBorder(borderRadius: BorderRadius.circular(30.r)),
...
                  ),
                ),
                SizedBox(height: 10.h),
                FadeInUp(
                  delay: const Duration(milliseconds: 100),
                  child: TextField(
                    key: const Key('passwordField'),
                    controller: passwordController,
                    obscureText: true,
                    decoration: InputDecoration(
                      prefixIcon: Icon(Icons.lock, size: 20.sp, color: Colors.orange),
                      labelText: "Mật khẩu",
                      labelStyle: GoogleFonts.poppins(fontSize: 14.sp),
...
                          color: Colors.orange,
                        ),
                      )
                    : FadeInUp(
                        delay: const Duration(milliseconds: 200),
                        child: ElevatedButton(
                          key: const Key('loginButton'),
                          onPressed: _login,
                          style: ElevatedButton.styleFrom(
                            backgroundColor: Colors.transparent,
                            shape: RoundedRectangleBorder(borderRadius: BorderRadius.circular(30.r)),
                            padding: EdgeInsets.symmetric(horizontal: 100.w, vertical: 15.h),
                            elevation: 4,
...
                    ),
                  ),
                ),
                FadeInUp(
                  delay: const Duration(milliseconds: 400),
                  child: TextButton(
                    key: const Key('goToHomeButton'),
                    onPressed: () => Navigator.pushNamed(context, '/home'),
                    child: Text(
                      "🛒 Xem sản phẩm (Không cần đăng nhập)",
                      style: GoogleFonts.poppins(
                        color: Colors.blueGrey,
                        fontSize: 14.sp,
...
