...
              ? Center(
                  child: FadeInUp(
                    child: Column(
                      mainAxisAlignment: MainAxisAlignment.center,
                      children: [
                        Text(
                          "Vui lòng đăng nhập để sử dụng giỏ hàng!",
                          style: GoogleFonts.poppins(fontSize: 16.sp),
                        ),
                        SizedBox(height: 20.h),
                        ZoomIn(
                          child: ElevatedButton(
                            onPressed: () {
...
                                    color: Colors.red,
                                  ),
                                ),
                                SizedBox(height: 20.h),
                                ZoomIn(
                                  child: ElevatedButton(
                                    key: const Key('checkoutButton'),
                                    onPressed: () {
                                      Navigator.push(
                                        context,
                                        PageRouteBuilder(
                                          pageBuilder: (context, animation, secondaryAnimation) =>
                                               CheckoutPage(),
...
